# pia-wg

./: README.md  main.py  pyproject.toml
piawg/: __init__.py  cli.py  piawg.py
piawg/templates/: container.conf.j2  default.conf.j2
piawg/templates/systemd-networkd/: 50-wg0.netdev.j2  50-wg0.network.j2
